# diogen

./: .gitignore  .pylintrc  LICENSE  README.md  flake.nix  plot.py  pyproject.toml
scripts/: drom_registry.py  performance_metrics.py  start_server.py  train_plate_detector.py  train_plate_reader.py  translate_detect_dataset.py
scripts/server/: api.py  parser.py
src/: diogen.py  train.py
src/common/: draw_boxes.py  letterbox.py  types.py
src/diogen/common/: draw_boxes.py  types.py
src/diogen/model/: pipeline.py  plate.py  truck.py
src/model/: plate.py  truck.py
src/server/: api.py  diogen.py  main.py  parser.py
src/step/: __init__.py  detect.py  number.py  type.py
src/train/plate/: detect.py  read.py  translate_detect_dataset.py
